--- a/src/styles/components/_suspect-card.scss
+++ b/src/styles/components/_suspect-card.scss
@@ -24,10 +24,36 @@
     font-family: Barlow, Arial, Helvetica, sans-serif;
     font-weight: 400;
     line-height: 22px;
-    margin: 10px 0;
     font-size: 16px;
 }
 
 .suspect-card_ul {
     margin-left: 14px;
+}
+
+.suspect-card_title {
+    font-size: 18px;
+    font-family: Barlow, Arial, Helvetica, sans-serif; 
+    font-weight: 600;
+    line-height: 25px;
+    color: $color-carbon;
+}
+
+.font--special-elite {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: $color-red;
+    strong {
+        font-weight: 500;
+        color: $color-carbon;
+    }
+}
+
+.suspect-card-subtitle {
+    margin-top: 18px;
+}
+
+.card-description-container {
+    min-height: 300px;
 }
