--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -513,8 +513,8 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
             <Fragment slot="notes">
               <ul>
                 <li class="item">
-                  Patient has an executed “pain contract” with physician's
-                  office due to history of opioid use
+                  Patient has an executed “pain contract” with <br />
+                  physician's office due to history of opioid use
                 </li>
               </ul>
             </Fragment>
@@ -582,8 +582,12 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                     </picture>
                     <div class="patient">
                       <p class="patient--color-black">
-                        Nontraumatic tooth loss at <br /> age 4
+                        Nontraumatic tooth loss at age 4
                       </p>
+                      <small
+                        >Reproduced with permission from <br /> Kiselnikova L, et
+                        al. Clinical Case Reports. <br /> 2020;8(5):911-918.</small
+                      >
                     </div>
                   </div>
                 </PinchToZoom>
@@ -900,11 +904,11 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                   <em>ALPL</em> genetic test: Autosomal recessive inheritance
                   <ul>
                     <li class="item">
-                      Parental genetic testing reveals single gene variant in
-                      mother and father
+                      Parental genetic testing reveals single <br /> gene variant
+                      in mother and father
                     </li>
                     <li class="item">
-                      Father's genetic variant reported as variant of uncertain
+                      Father's genetic variant reported as variant <br /> of uncertain
                       significance (VUS)
                     </li>
                   </ul>
