--- a/src/components/Case-Files/PatientCaseFile.astro
+++ b/src/components/Case-Files/PatientCaseFile.astro
@@ -6,11 +6,9 @@ type Props = {
   age: number | string;
   gender: string;
   description: string;
-  photoMobile: string;
-  photoDesktop: string;
+  photo: string;
 };
-const { id, name, age, gender, description, photoMobile, photoDesktop } =
-  Astro.props;
+const { id, name, age, gender, description, photo } = Astro.props;
 const activeClass = Number(id) === 1 ? "active" : "";
 // Check if age is a string and if it is, check for the word "months"
 let ageString = "";
@@ -27,8 +25,7 @@ if (age && typeof age === "string" && age.includes("months")) {
     <div class="patient__case_grid">
       <div class="grid_header">
         <picture>
-          <source media="(min-width: 1024px)" srcset={photoDesktop} />
-          <img class="profile__pic" src={photoMobile} />
+          <img class="profile__pic" src={photo} />
         </picture>
         <img
           class="profile__finger_print"
