Minor adjustments to usual-suspects table.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4135,7 +4135,7 @@
                 line-height: 0;
                 margin-right: 0.5rem;
                 display: inline-block;
-                top: 4px;
+                top: 0.5rem;
                 left: -15px;
                 position: absolute;
             }
